# RDDS

./: Cargo.toml  Dockerfile  HARMONY_GUIDE.md  HARMONY_IMPORT_FIX.md  HARMONY_README.md  HARMONY_README_FINAL.md  build.py  harmony_tool.sh  setup-harmony-project.sh  setup_harmony.sh
.github/: dependabot.yml
.github/workflows/: bridge-vumstar.yml  bridge.yml  ci.yml  clear-cache.yml  fdroid.yml  flutter-build-vumstar.yml  flutter-build.yml  playground.yml  third-party-RustDeskTempTopMostWindow.yml
flutter/lib/plugin/: harmony_adapter.dart
harmonyos/: .gitignore  README.md  SECURITY.md  build-profile.json5  hvigor-wrapper.js  hvigorfile.ts  oh-package.json5  package.json
harmonyos/AppScope/: app.json5
harmonyos/entry/: build-profile.json5  hvigorfile.ts  oh-package.json5  package.json
harmonyos/entry/src/main/: module.json5
harmonyos/entry/src/main/cpp/: CMakeLists.txt  napi_bindings.cpp
harmonyos/entry/src/main/ets/entryability/: EntryAbility.ets
harmonyos/entry/src/main/ets/pages/: Index.ets  RemoteDesktop.ets  Settings.ets
harmonyos/entry/src/main/ets/utils/: RustDeskCore.ets
harmonyos/entry/src/main/resources/base/element/: string.json
harmonyos/entry/src/main/resources/base/media/: PLACEHOLDERS.md
harmonyos/entry/src/main/resources/base/profile/: main_pages.json
harmonyos/native/harmony_ffi/: Cargo.toml
harmonyos/native/harmony_ffi/src/: capture.rs  connection.rs  input.rs  lib.rs  utils.rs  video.rs
libs/clipboard/: Cargo.toml
libs/enigo/: Cargo.toml
libs/hbb_common/: Cargo.toml
libs/hbb_common/protos/: rendezvous.proto
libs/hbb_common/src/: config.rs
libs/portable/: Cargo.toml
libs/remote_printer/: Cargo.toml
libs/scrap/: Cargo.toml
libs/scrap/src/: lib.rs
libs/scrap/src/harmony/: mod.rs
libs/scrap/src/wayland/: pipewire.rs
libs/virtual_display/dylib/: Cargo.toml
res/: job.py
src/: client.rs  common.rs  flutter_ffi.rs  ipc.rs  port_forward.rs  rendezvous_mediator.rs  server.rs
src/hbbs_http/: http_client.rs
src/platform/: harmony.rs  linux_desktop_manager.rs  mod.rs
src/server/: connection.rs
